[package]
name = "exhume_extfs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
exhume_partitions = { path = "../exhume_partitions" }
exhume_lvm = { path = "../exhume_lvm" }

exhume_body = { path = "../exhume_body" }
log = "0.4.25"
clap = "4.0"
clap-num = "1.1.1"
prettytable-rs = "^0.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
env_logger = "0.11.6"
