[package]
name = "exhume_extfs"
version = "0.1.9"
edition = "2021"
description = "Extract Extended Filesystem specific artefacts from a Partition."
documentation = "https://www.forensicxlab.com/docs/category/exhume---extfs"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
exhume_body = "=0.3.4"

byteorder = "1.4"

log = "0.4.25"
clap = "4.0"
clap-num = "1.1.1"
prettytable-rs = "^0.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
env_logger = "0.11.6"
